# GummysaverQt

./: CMakeLists.txt  conanfile.txt  gamehandler.cpp  gamehandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
games/: gamehandler.cpp  gamehandler.h  gamelist.cpp  gamelist.h
util/: archiver.cpp  archiver.h  exceptions.cpp  gamedb.cpp  gamedb.h  logger.cpp  logger.h
widget/: backuprestore.cpp  backuprestore.h  backuprestore.ui
